[tool.poetry]
name = "testapp"
version = "0.1.0"
description = "My project, created using nusex"
license = "BSD 3-Clause "New" or "Revised" License"
repository = "https://github.com/nusex/testapp"
authors = ["Ethan Henderson <ethan.henderson.1998@gmail.com>"]

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
